WalletWasabi.Backend/wwwroot/css/style.css
/* ... */
.wallet-cubes .cube:nth-child(3) {
    width: 161px;
    height: 161px;
    top: 33%;
    left: 62%;
}
.wallet-cubes .cube:nth-child(4) {
    width: 32px;
    height: 32px;
    top: 108%;
    left: 40%;
}
.wallet-cubes .cube:nth-child(5) {
    width: 34px;
    height: 34px;
    top: 95%;
    left: 51%;
}
.wallet-cubes .cube:nth-child(6) {
    width: 78px;
    height: 78px;
    top: 101%;
    left: 77%;
}
.wallet-cubes .cube:nth-child(7) {
    width: 18px;
    height: 18px;
    top: 143%;
    left: 88%;
}
.wallet-cubes .cube:nth-child(8) {
    width: 77px;
    height: 77px;
    top: 145%;
    left: 54%;
}
.wallet-cubes .cube:nth-child(9) {
    width: 17px;
    height: 17px;
    top: 176%;
    left: 54%;
}
.wallet-cubes .cube:nth-child(10) {
    width: 17px;
    height: 17px;
    top: 183%;
    left: 47%;
}
.home-text-area {
    width: 100%;
    max-width: 600px;
    margin-bottom: 40px;
}
.home-text-area h1 {
    font-size: 60px;
}
.lh {
    line-height: 1.5em;
}
.btn {
    padding-top: 15px;
    padding-bottom: 10px;
    font-weight: bold;
    font-size: 14px;
    border-radius: 0;
}
.btn-primary {
    background-color: var(--green);
    border-color: var(--green);
}
.btn-secondary {
    background-color: transparent;
    border: 2px solid var(--green);
    color: var(--green);
    border-radius: 0;
    text-transform: uppercase;
}
.btn-secondary:hover {
    background-color: var(--green);
    color: #fff;
    border-color: var(--green);
}
.btn-download {
    font-size: 20px;
    padding: 15px 25px 9px;
}
.btn-download svg {
    fill: #FFF;
    height: 26px;
}
.btn-primary:hover {
    background-color: var(--light-blue);
    border-color: var(--light-blue);
}
.navbar {
    background: rgba(0, 0, 0, 0.3);
    -webkit-backdrop-filter: saturate(180%) blur(20px);
    backdrop-filter: saturate(180%) blur(20px);
    position: fixed;
    width: 100%;
    z-index: 9999;
    top: 0;
    left: 0;
    padding: 0;
    font-size: 15px;
}
.navbar .btn {
    padding-top: 10px;
    padding-bottom: 5px;
}
.navbar-expand-lg .navbar-nav .nav-item {
    padding: 0.4em 1em;
    text-transform: uppercase;
}
.navbar-expand-lg .navbar-nav .nav-item:last-child {
    padding-right: 0;
}
.navbar-dark .navbar-nav .nav-link {
    color: #fff;
}
.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
    color: var(--green);
}
.nav-link {
    padding: 0.9em 0 0.4em;
}
.dropdown:hover > .dropdown-menu {
    display: block;
}
.dropdown-toggle::after {
    color: var(--green);
}
.download-mac, .download-windows, .download-linux, .download-other {
    padding: 20px;
}
.download-box {
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -ms-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
    border-right: 1px solid var(--light-gray);
}
.download-box:last-child {
    border-right: 0;
}
.download-box svg {
    height: 40px;
    width: 40px;
    margin: 40px auto;
}
.download-box:hover {
    background-color: rgb(73, 88, 107, 0.2);
}
ol {
    line-height: 1.7em;
    margin: 20px 0;
    padding: 0;
    padding-left: 20px;
}
ol li {
    margin: 15px 0;
}
ol li::marker {
    color: var(--green);
}
.small-text {
    font-size: 12px;
}
.muted-text {
    opacity: 0.5;
}
.muted-text:hover {
    opacity: 1;
}
.cursor-select {
    cursor: text;
}
.timeline {
    margin: 80px 0;
    padding: 0;
}
.timeline:before {
    content: '';
    display: block;
    width: 20px;
    height: 20px;
    background: var(--green);
    margin-left: calc(50% - 11px);
}
.timeline:after {
    content: '';
    display: block;
    width: 20px;
    height: 20px;
    background: var(--green);
    margin-left: calc(50% - 11px);
}
.timeline li {
    width: 50%;
    padding: 60px 0 5px;
    padding-right: 20%;
    position: relative;
    display: block;
}
.timeline li:before {
    content: '□';
    display: block;
    color: var(--green);
    position: absolute;
    font-size: 70px;
    top: 72px;
}
.timeline li:nth-child(even):before {
    left: calc(15% - 8px);
}
.timeline li:nth-child(odd):before {
    right: calc(15% - 8px);
}
.timeline li:nth-child(even) {
    margin-left: calc(50% - 1px);
    padding-left: 20%;
    padding-right: 0;
}
.timeline-title {
    font-weight: bold;
    font-size: 30px;
    color: var(--green);
    margin-bottom: 10px;
    line-height: 1.2em;
}
.timeline li:nth-child(odd) {
    border-right: 1px solid var(--green);
}
.timeline li:nth-child(even) {
    border-left: 1px solid var(--green);
}
.timeline li .timeline-title:after {
    content: '';
    font-size: 80px;
    position: absolute;
    display: block;
    top: 75px;
    width: 15%;
    height: 1px;
    background-color: var(--green);
}
.timeline li:nth-child(odd) .timeline-title:after {
    right: 0;
}
.timeline li:nth-child(even) .timeline-title:after {
    left: 0;
}
.timeline-small-img {
    height: 30px;
    vertical-align: top;
}
.partner-line {
    background: rgba(157, 168, 171, 0.2);
}
.help-logo {
    height: 120px;
}
.card {
    color: var(--black);
    margin: 20px 0;
}
.card-content, .card input {
    display: none;
}
.card input:checked + label + .card-content {
    display: block;
}
.card label {
    padding: 20px 20px 16px 20px;
    font-size: 18px;
    font-weight: bold;
    cursor: pointer;
    line-height: 1.2em;
}
.card label:after {
    content: '▼';
    color: var(--green);
    position: absolute;
    right: 0;
    padding: 0 20px;
    top: calc(50% - 7px);
}
.card input:checked + label:after {
    content: '▲';
    top: 20px;
}
.card-content {
    padding: 18px;
}
.card table {
    color: var(--green);
    margin: 40px;
}
.navbar:hover .collapse:not(.show) {
    display: block;
}
/* ... */

